client/src/components/List/style.scss
@import '../../App.scss';

.list {
    width: 100%;
    margin-top: 10px;

    .listtitle {
        display: inline-block;
        color: white;
        font-size: 20px;
        font-weight: 500;
        margin: 15px 50px;
    }

    .wrapper {
        position: relative;

        .sliderarrow {
            width: 50px;
            height: 100%;
            background-color: rgba(22, 22, 22, 0.5);
            color: white;
            position: absolute;
            z-index: 99;
            top: 0;
            bottom: 0;
            margin: auto;
            cursor: pointer;

            &.left {
                left: 0;
            }

            &.right {
                right: 0;
                
            }
        }

        .container {
            display: flex;
            margin-left: 50px;
            width: max-content;
            margin-top: 10px;
            transform: translateX(0);
            transition: all 0.8s ease;
        }
    }
}

